--- a/Instructions/citibike data cleaning.ipynb
+++ b/Instructions/citibike data cleaning.ipynb
@@ -2268,7 +2268,7 @@
    "id": "ac4d295c",
    "metadata": {},
    "source": [
-    "#### 'worked with TA's and Other students to develop code and also looked some stuff up onon stackoverflow to help me find the answers need to get the right idea going'"
+    "#### 'worked with TA's and Other students to develop code and also looked some stuff up on stackoverflow to help me find the answers need to get the right idea going'"
    ]
   }
  ],
