--- a/Instructions/citibike data cleaning.ipynb
+++ b/Instructions/citibike data cleaning.ipynb
@@ -2264,20 +2264,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "793c91c6",
+   "cell_type": "markdown",
+   "id": "ac4d295c",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f37263c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 'worked with TA's and Other students to develop code and also looked some stuff up onon stackoverflow to help me find the answers need to get the right idea going'"
+   ]
   }
  ],
  "metadata": {
