--- a/Instructions/jan20_sep20.ipynb
+++ b/Instructions/jan20_sep20.ipynb
@@ -2065,28 +2065,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43564afa",
+   "cell_type": "markdown",
+   "id": "0ba16943",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "793c91c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f37263c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### worked with TA's and Other students to develop code and also looked some stuff up onon stackoverflow to help me find the answers need to get the right idea going'"
+   ]
   }
  ],
  "metadata": {
